test-suite/output/bug_15106.out
File "./output/bug_15106.v", line 4, characters 0-13:
Error: Obligation 2 already solved.

